add payments academy  major cascade and others......